[package]
name = "jwt-validator"
version = "0.1.0"
authors = ["bdbmammoth <brian.deboer@mammoth.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
base64 = "0.12.1"
futures = "0.3"
jsonwebtoken = { git = "https://github.com/bdbmammoth/jsonwebtoken", branch = "less-decoding" }
lazy_static = "1.4.0"
log = "0.4.8"
openssl = "0.10.29"
serde = "1.0.110"
serde_json = "1.0.53"
tokio = "0.2.21"